Update index.html with real business info
Updated template with real business info

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Business Name</h1>
-        <p>Welcome to our website! We offer [your services/products].</p>
+        <h1>WEST MEDIA LLC</h1>
+        <p>Welcome to our website! We are a business management agency.</p>
         <p>If you have any questions, feel free to contact us at:</p>
         <div class="contact">
-            <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: <a href="mailto:your-email@example.com">chakra_bylines_0j@icloud.com<a></p>
         </div>
     </div>
 </body>
