Update index.html title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Business Name</title>
+    <title>WEST MEDIA AGENCY</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: #f4f4f4; }
         .container { text-align: center; padding: 20px; border: 1px solid #ccc; background-color: #fff; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>WEST MEDIA LLC</h1>
+        <h1>WEST MEDIA AGENCY</h1>
         <p>Welcome to our website! We are a business management agency.</p>
         <p>If you have any questions, feel free to contact us at:</p>
         <div class="contact">
